--- a/Robot/Robot.csproj
+++ b/Robot/Robot.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
       <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
     </ItemGroup>
 
